[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-llama"
version = "0.0.1"
description = "Supercharge your local LLM with different agents"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["AI", "LLM", "Llama"]
authors = [
  { name = "LufixSch" }
]
classifiers = [
   "Programming Language :: Python :: 3",
   "Development Status :: 3 - Alpha",
   "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Operating System :: OS Independent",
]
dependencies = [
  "openai"
]

[project.optional-dependencies]
research = [
  "wikipedia",
  "duckduckgo_search"
]
code = [
  "docker",
  "pandas",
  "requests"
]
memory = [
  "txtai",
  "nltk",
  "num2words"
]

[tool.hatch.build]
packages = [
  "pkg/auto_llama/",
  "pkg/auto_llama_agents/"
]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = 'black'
extend_skip = ['__init__.py']
